ecmascript/parser/tests/typescript-errors/tsc/es6/functionDeclarations/FunctionDeclaration10_es6/input.ts.stderr
error: 'yield' cannot be used as a parameter within generator
 --> $DIR/tests/typescript-errors/tsc/es6/functionDeclarations/FunctionDeclaration10_es6/input.ts:2:20
  |
2 | function * foo(a = yield => yield) {
  |                    ^^^^^

error: Expected ), got {
 --> $DIR/tests/typescript-errors/tsc/es6/functionDeclarations/FunctionDeclaration10_es6/input.ts:2:36
  |
2 | function * foo(a = yield => yield) {
  |                                    ^

